sinalcabo/force-app/main/default/objects/SC_Aprovacao_Config__c/SC_Aprovacao_Config__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>SinalCabo (M.2) - configuracao do motor de aprovacao. Hierarchy custom setting (org default + override por perfil/utilizador).</description>
    <label>SC Aprovação Config</label>
</CustomObject>