sinalcabo/force-app/main/default/objects/SC_Aprovacao_Config__c/fields/Aprovador_Default_Id__c.field-meta.xml
<CustomField>
    <fullName>Aprovador_Default_Id__c</fullName>
    <description>SinalCabo (M.2) - Id do utilizador admin/Daniela que aprova quando nao ha regra nem director (SemGovernacao). O motor preenche Aprovador_Alvo_N1 com este Id para a proposta nunca ficar presa.</description>
    <label>Aprovador por Defeito (User Id)</label>
    <length>18</length>
    <type>Text</type>
</CustomField>